@@ -1,11 +1,11 @@
 package com.idforideas.wikideas.repository;
 
 import com.idforideas.wikideas.dto.ArticleDTO;
-import com.idforideas.wikideas.dto.ThemeDTO;
 import com.idforideas.wikideas.exception.MessageErrorEnum;
 import com.idforideas.wikideas.exception.WikiException;
 import com.idforideas.wikideas.model.ArticleEntity;
 import com.idforideas.wikideas.model.ThemeEntity;
+import com.idforideas.wikideas.model.ThemeEnum;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -13,7 +13,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Component
@@ -25,9 +24,25 @@ public class ArticleDAO {
     public Optional<ArticleEntity> findById(Long id ){
         return articleRepository.findById(id);
     }
+    public void findByTitle(ArticleDTO article ){
+        List<String> articles = articleRepository.findAll()
+                .stream()
+                .map(ArticleEntity::getTitle)
+                .toList();
+        Optional<String> articleExist = articles.stream()
+                .filter(element -> element.equalsIgnoreCase(article.getTitle()))
+                .findFirst();
+        if (articleExist.isPresent()) {
+            throw new WikiException(MessageErrorEnum.ARTICLE_EXISTS.getMessage());
+        }
+    }
 
-    public ArticleEntity createArticle(ArticleDTO article, ThemeDTO theme){
-        ThemeEntity themeEntity = getTheme(theme);
+    public ArticleEntity createArticle(ArticleDTO article){
+        Optional<ThemeEnum> theme1 = Optional.ofNullable(article.getTheme());
+        if (!theme1.isEmpty()){
+            throw new WikiException(MessageErrorEnum.INVALID_THEME.getMessage());
+        }
+        ThemeEntity themeEntity = themeRepository.findByTheme(article.getTheme());
         ArticleEntity articleEntity = ArticleEntity.builder()
                 .title(article.getTitle())
                 .text(article.getText())
@@ -37,9 +52,12 @@ public class ArticleDAO {
         return articleRepository.saveAndFlush(articleEntity);
     }
 
-    public ArticleEntity updateArticle(Long id, ArticleDTO article, ThemeDTO theme){
+    public ArticleEntity updateArticle(Long id, ArticleDTO article){
         Optional<ArticleEntity> articleUpdate = articleRepository.findById(id);
-       ThemeEntity themeEntity = getTheme(theme);
+        if (articleUpdate.isEmpty()){
+            throw new WikiException("Article does not exist");
+        }
+       ThemeEntity themeEntity = themeRepository.findByTheme(article.getTheme());
         articleUpdate.get().setText(article.getText());
         articleUpdate.get().setTitle(article.getTitle());
         articleUpdate.get().setImage(article.getImage());
@@ -47,26 +65,25 @@ public class ArticleDAO {
         return articleRepository.saveAndFlush(articleUpdate.get());
     }
 
-    public Optional<ArticleEntity> getByTitle(ArticleDTO article){
-        List<ArticleEntity> articles = articleRepository.findAll();
-        String articleTest="";
-
-        for (int i=0; i< articles.size();i++){
-            if (article.getTitle().equalsIgnoreCase(articles.get(i).getTitle())){
-                articleTest = articles.get(i).getTitle();
-                return Optional.ofNullable(articles.get(i));
-            }
+    public ArticleEntity getByTitle(ArticleDTO article){
+        List<String> articles = articleRepository.findAll()
+                .stream()
+                .map(ArticleEntity::getTitle)
+                .toList();
+        Optional<String> articleExist = articles.stream()
+                .filter(element -> element.equalsIgnoreCase(article.getTitle()))
+                .findFirst();
+        if (articleExist.isEmpty()){
+            throw new WikiException(MessageErrorEnum.INVALID_TITLE.getMessage());
         }
-
-        return Optional.ofNullable(articleRepository.findArticleByTitle(articleTest));
+        return articleRepository.findArticleByTitle(articleExist.get());
     }
 
     public List<ArticleDTO> getAll() {
         List<ArticleEntity> articles = articleRepository.findAll();
         return articles.stream()
                 .map(ArticleDTO::new)
-                .collect(Collectors.toList());
-
+                .toList();
     }
 
     public void deleteArticleById(Long id) {
@@ -77,31 +94,18 @@ public class ArticleDAO {
         return articleRepository.findAll(pageRequest);
     }
 
-    public ThemeEntity getTheme(ThemeDTO theme) {
+    public List<ArticleDTO> showArticlesByTheme(String theme) {
+        ThemeEnum themeEnum = ThemeEnum.valueOf(theme);
+        Optional<ThemeEntity> themeEntity = Optional.ofNullable(themeRepository.findByTheme(themeEnum));
 
-        Optional<ThemeEntity> themeEntity = Optional.ofNullable(themeRepository.findByTheme(theme.getTheme()));
-
-        if (!themeEntity.isPresent()) {
-          ThemeEntity theme1 = ThemeEntity.builder()
-                  .theme(theme.getTheme())
-                  .description(theme.getDescription())
-                  .build();
-            themeRepository.saveAndFlush(theme1);
-            return theme1;
-        }
-        return themeEntity.get();
-    }
-
-    public List<ArticleDTO> showArticlesByTheme(ThemeDTO theme) {
-        Optional<ThemeEntity> themeEntity = Optional.ofNullable(themeRepository.findByTheme(theme.getTheme()));
-
-       if (!themeEntity.isPresent()){
+       if (!themeEntity.isEmpty()){
             throw new WikiException(MessageErrorEnum.INVALID_THEME.getMessage());
         }
 
         List<ArticleEntity> articles = articleRepository.findByTheme(themeEntity.get());
+
         return articles.stream()
                 .map(ArticleDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
