@@ -2,15 +2,10 @@ package com.idforideas.wikideas.service.impl;
 
 import com.idforideas.wikideas.dto.ArticleDTO;
 import com.idforideas.wikideas.dto.ArticleResponseDTO;
-import com.idforideas.wikideas.dto.ThemeDTO;
 import com.idforideas.wikideas.dto.validator.IValidatorArticle;
-import com.idforideas.wikideas.exception.MessageErrorEnum;
 import com.idforideas.wikideas.exception.WikiException;
 import com.idforideas.wikideas.model.ArticleEntity;
-import com.idforideas.wikideas.model.ThemeEnum;
 import com.idforideas.wikideas.repository.ArticleDAO;
-import com.idforideas.wikideas.repository.ArticleRepository;
-import com.idforideas.wikideas.repository.ThemeRepository;
 import com.idforideas.wikideas.service.ArticleService;
 import com.idforideas.wikideas.utils.DTOValidator;
 import lombok.RequiredArgsConstructor;
@@ -23,7 +18,6 @@ import org.springframework.ui.Model;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Service
@@ -31,35 +25,13 @@ import java.util.stream.IntStream;
 public class ArticleServiceImpl implements ArticleService {
 
     private final ArticleDAO articleDAO;
-    private final ArticleRepository articleRepository;
-    private final ThemeRepository themeRepository;
 
     @Override
     public ResponseEntity<ArticleResponseDTO> createArticle(ArticleDTO article) {
         DTOValidator.validate(article, IValidatorArticle.class);
-        Optional<ArticleEntity> articleExists = articleDAO.getByTitle(article);
-        if (articleExists.isPresent()) {
-            throw new WikiException(MessageErrorEnum.ARTICLE_EXISTS.getMessage());
-        }
-        Optional<ThemeEnum> theme1 = Optional.ofNullable(article.getTheme());
-        if (!theme1.isPresent()){
-            throw new WikiException(MessageErrorEnum.INVALID_THEME.getMessage());
-        }
-        ThemeDTO themeDTO = ThemeDTO.builder()
-                .theme(theme1.get())
-                .description(theme1.get().getTheme())
-                .build();
-
-        ArticleEntity articleEntity = articleDAO.createArticle(article, themeDTO);
-        ArticleResponseDTO response = ArticleResponseDTO.builder()
-                .text(articleEntity.getText())
-                .id(articleEntity.getIdArticle())
-                .image(articleEntity.getImage())
-                .creationDate(articleEntity.getCreationDate())
-                .title(articleEntity.getTitle())
-                .theme(articleEntity.getTheme().getTheme())
-                .updateDate(articleEntity.getUpdateDate())
-                .build();
+        articleDAO.findByTitle(article);
+        ArticleEntity articleEntity = articleDAO.createArticle(article);
+        ArticleResponseDTO response = responseDTO(articleEntity);
         return new ResponseEntity<>(response, HttpStatus.CREATED);
 
     }
@@ -68,43 +40,19 @@ public class ArticleServiceImpl implements ArticleService {
     public ResponseEntity<Object> updateArticle(Long id, ArticleDTO article) {
         DTOValidator.validate(article, IValidatorArticle.class);
         Optional<ArticleEntity> opArticle = articleDAO.findById(id);
-        if (!opArticle.isPresent()){
+        if (!opArticle.isEmpty()){
             throw new WikiException("article does not  exist");
         }
-        ThemeDTO themeDTO = ThemeDTO.builder()
-                .theme(article.getTheme())
-                .description(String.valueOf(article.getTheme()))
-                .build();
-        ArticleEntity articleEntity = articleDAO.updateArticle(id, article, themeDTO);
-        ArticleResponseDTO response = ArticleResponseDTO.builder()
-                .text(articleEntity.getText())
-                .id(articleEntity.getIdArticle())
-                .image(articleEntity.getImage())
-                .creationDate(articleEntity.getCreationDate())
-                .title(articleEntity.getTitle())
-                .theme(articleEntity.getTheme().getTheme())
-                .updateDate(articleEntity.getUpdateDate())
-                .build();
-        return new ResponseEntity<>(response, HttpStatus.CREATED);
+        ArticleEntity articleEntity = articleDAO.updateArticle(id, article);
+        ArticleResponseDTO response = responseDTO(articleEntity);
+        return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
     @Override
-    public ArticleResponseDTO getArticleByTitle(ArticleDTO article)  {
-
-        Optional<ArticleEntity> opArticle = articleDAO.getByTitle(article);
-        if (!opArticle.isPresent()){
-           throw new WikiException("title does not  exist");
-        }
-    return ArticleResponseDTO.builder()
-            .id(opArticle.get().getIdArticle())
-            .title(opArticle.get().getTitle())
-            .text(opArticle.get().getText())
-            .image(opArticle.get().getImage())
-            .creationDate(opArticle.get().getCreationDate())
-            .updateDate(opArticle.get().getUpdateDate())
-            .theme(opArticle.get().getTheme().getTheme())
-            .build();
-
+    public ResponseEntity<ArticleResponseDTO> getArticleByTitle(ArticleDTO article)  {
+        ArticleEntity articleEntity = articleDAO.getByTitle(article);
+        ArticleResponseDTO response = responseDTO(articleEntity);
+        return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
     @Override
@@ -124,7 +72,7 @@ public class ArticleServiceImpl implements ArticleService {
 
         int totalPages = pageAccounts.getTotalPages();
         if(totalPages > 0){
-            List<Integer> pages = IntStream.rangeClosed(1, totalPages).boxed().collect(Collectors.toList());
+            List<Integer> pages = IntStream.rangeClosed(1, totalPages).boxed().toList();
             model.addAttribute("pages", pages);
             model.addAttribute("current", pageNumber+1);
             model.addAttribute("next", pageNumber+2);
@@ -147,26 +95,28 @@ public class ArticleServiceImpl implements ArticleService {
     }
 
     @Override
-    public ArticleResponseDTO getArticleById(Long id) {
+    public ResponseEntity<ArticleResponseDTO> getArticleById(Long id) {
         Optional<ArticleEntity> opArticle = articleDAO.findById(id);
-        if (!opArticle.isPresent()){
+        if (!opArticle.isEmpty()){
             throw new WikiException("article does not  exist");
         }
-        ArticleResponseDTO articleResponseDTO = ArticleResponseDTO.builder()
-                .id(opArticle.get().getIdArticle())
-                .title(opArticle.get().getTitle())
-                .text(opArticle.get().getText())
-                .image(opArticle.get().getImage())
-                .creationDate(opArticle.get().getCreationDate())
-                .updateDate(opArticle.get().getUpdateDate())
-                .theme(opArticle.get().getTheme().getTheme())
-                .build();
-        return articleResponseDTO;
+        ArticleResponseDTO response = responseDTO(opArticle.get());
+        return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
     @Override
-    public List<ArticleDTO> showArticlesByTheme(ThemeDTO theme) {
+    public List<ArticleDTO> showArticlesByTheme(String theme) {
         return articleDAO.showArticlesByTheme(theme);
     }
-
+    private ArticleResponseDTO responseDTO(ArticleEntity articleEntity){
+        return ArticleResponseDTO.builder()
+                .text(articleEntity.getText())
+                .id(articleEntity.getIdArticle())
+                .image(articleEntity.getImage())
+                .creationDate(articleEntity.getCreationDate())
+                .title(articleEntity.getTitle())
+                .theme(articleEntity.getTheme().getTheme())
+                .updateDate(articleEntity.getUpdateDate())
+                .build();
+    }
 }
